[package]
name = "mctool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
image = { version = "0.25.6", default-features = false, features = ["png"] }
sdl2 = { version = "0.38.0", features = ["image", "ttf"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
windows = { version = "0.61.3", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
